force-app/main/default/objects/Project_Agency__c/Project_Agency__c.object-meta.xml
<CustomObject>
    <label>Project Agency</label>
    <nameField>
        <displayFormat>PA - {00000}</displayFormat>
        <label>PA #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Agencys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>