force-app/main/default/objects/Project_Agency__c/fields/Agency_Briefing__c.field-meta.xml
<CustomField>
    <fullName>Agency_Briefing__c</fullName>
    <label>Agency Briefing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>