force-app/main/default/objects/Project_Agency__c/fields/Agency_Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Agency_Contract_Start_Date__c</fullName>
    <label>Agency Contract Start Date</label>
    <type>Date</type>
</CustomField>