force-app/main/default/objects/Project_Agency__c/fields/Agency_Trade_License_No__c.field-meta.xml
<CustomField>
    <fullName>Agency_Trade_License_No__c</fullName>
    <formula>X3rd_Party_Agent__r.Agency_Trade_License_No__c</formula>
    <label>Agency Trade License No</label>
    <type>Text</type>
</CustomField>