force-app/main/default/objects/Project_Agency__c/fields/Contract_Expired_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Expired_Date__c</fullName>
    <formula>TEXT(DAY(Agency_Contract_Expired_Date__c)) &amp; &quot;-&quot; &amp; TEXT(MONTH(Agency_Contract_Expired_Date__c)) &amp; &quot;-&quot; &amp; TEXT(YEAR(Agency_Contract_Expired_Date__c))</formula>
    <label>Contract Expired Date</label>
    <type>Text</type>
</CustomField>