force-app/main/default/objects/Project_Agency__c/fields/Date_of_Issuance__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Issuance__c</fullName>
    <formula>TEXT(DAY(TODAY())) &amp; &quot;-&quot; &amp; TEXT(MONTH(TODAY())) &amp; &quot;-&quot; &amp; TEXT(YEAR(TODAY()))</formula>
    <label>Date of Issuance</label>
    <type>Text</type>
</CustomField>