force-app/main/default/objects/Project_Agency__c/fields/ORN_No__c.field-meta.xml
<CustomField>
    <fullName>ORN_No__c</fullName>
    <formula>X3rd_Party_Agent__r.ORN_No__c</formula>
    <label>ORN No</label>
    <type>Text</type>
</CustomField>