force-app/main/default/objects/Project_Agency__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <referenceTo>CD_Project__c</referenceTo>
    <relationshipLabel>Project Agencys</relationshipLabel>
    <relationshipName>Project_Agents</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>