force-app/main/default/objects/Project_Agency__c/fields/Project_Agency_Document_Field__c.field-meta.xml
<CustomField>
    <fullName>Project_Agency_Document_Field__c</fullName>
    <formula>Project__r.Name &amp; &quot; &quot; &amp; &quot;-&quot; &amp; &quot; &quot; &amp;  X3rd_Party_Agent__r.FirstName  + &quot; &quot; +  X3rd_Party_Agent__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Agency Document Field</label>
    <type>Text</type>
</CustomField>