force-app/main/default/objects/Project_Agency__c/fields/Registration__c.field-meta.xml
<CustomField>
    <fullName>Registration__c</fullName>
    <label>Registration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Registration</valueSetName>
    </valueSet>
</CustomField>