force-app/main/default/objects/Project_Agency__c/fields/Valid_NOC__c.field-meta.xml
<CustomField>
    <fullName>Valid_NOC__c</fullName>
    <label>Valid NOC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>