force-app/main/default/objects/Project_Agency__c/fields/X3rd_Party_Agency__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>3rd Party Agency</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Project Agencys</relationshipLabel>
    <relationshipName>Project_Agents</relationshipName>
    <type>Lookup</type>
</CustomField>