force-app/main/default/objects/Project_Agency__c/fields/X3rd_Party_Agent__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_Agent__c</fullName>
    <label>3rd Party Agency</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Project Agencys</relationshipLabel>
    <relationshipName>Project_Agencys</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>